Fix Footer Spacing

--- a/src/scss/partials/_globals.scss
+++ b/src/scss/partials/_globals.scss
@@ -1,6 +1,6 @@
 body {
   // padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-bottom: 6rem;
   padding-right: 0 !important; // Override buggy modal code
   background-color: #D9D9D9;
 }
